# smartquant

./: .gitignore  CMakeLists.txt  README.md  build.sh
3rd/: CMakeLists.txt
smartquant/: CMakeLists.txt  declare.h  object.h  utils.cpp  utils.h
smartquant/algo/: CMakeLists.txt
smartquant/algo/include/: algo.h  backtesting.h  bargenerator.h  instrument.h  smartorder.h  template.h
smartquant/algo/src/: algo.cpp  bargenerator.cpp  instrument.cpp  smartorder.cpp  template.cpp
smartquant/api/rem/: EESQuoteDefine.h
smartquant/api/stock_level2/StockL2Client(efvi)/: Readme.txt  StockL2Client.cpp  dataDefine.h  makefile
smartquant/api/stock_level2/StockL2Client(socket)/: Readme.txt  StockL2Client.cpp  dataDefine.h  makefile
smartquant/datasource/include/: jqdata.h
smartquant/event/: CMakeLists.txt
smartquant/event/include/: event.h
smartquant/event/src/: event.cpp
smartquant/gateway/: CMakeLists.txt  gateway.h
smartquant/gateway/ctp/: CMakeLists.txt  ctp_gateway.cpp  ctp_gateway.h  ctp_utils.h  ctpmd.cpp  ctpmd.h  ctptd.cpp  ctptd.h
smartquant/gateway/rem/: CMakeLists.txt  rem_gateway.cpp  rem_gateway.h  rem_utils.h  remmd.cpp  remmd.h  remtd.h
smartquant/gateway/stock_level2/: CMakeLists.txt  l2_gateway.cpp  l2_gateway.h  l2md.cpp  l2md.h  l2td.cpp  l2td.h
smartquant/strategy/: CMakeLists.txt  IndexArb.cpp  config.json  demo.cpp  example.cpp  indexArb_v2.cpp  indexArb_v2_new.cpp  indexArb_v3.cpp  indexArb_v4.cpp  pending.cpp  recoder.cpp  test_strategy.cpp
smartquant/test/: CMakeLists.txt  test.cpp
